# haskell-2023

./: .gitignore  LICENSE  README.md
algeffects/: CHANGELOG.md  algeffects.cabal
algeffects/src/: Example.hs
algeffects/src/Control/Monad/: Freer.hs
brainfunk/: CHANGELOG.md  brainfunk.cabal
brainfunk/app/: Main.hs
brainfunk/src/: Lib.hs
deptypes/: CHANGELOG.md  deptypes.cabal
deptypes/src/: Deptypes.hs  Example.hs  Singletons.hs
gadts/: existentials.hs  gadts.hs
haskell-exceptions/: CHANGELOG.md  haskell-exceptions.cabal
haskell-exceptions/app/: Main.hs
haskell-optics/: CHANGELOG.md  haskell-optics.cabal
haskell-optics/app/: Main.hs
haskell-streams/: CHANGELOG.md  haskell-streams.cabal
haskell-streams/app/: Main.hs
haskell-zippers/: CHANGELOG.md  haskell-zippers.cabal
haskell-zippers/app/: Main.hs
hw-effects/: README.md  SUGGESTION.md  hw-effects.cabal
hw-effects/app/: Main.hs
hw-effects/app/Bank/: Handle.hs
hw-effects/pure-bank/Bank/: Pure.hs
hw-effects/pure-bank/Data/: Accounts.hs
hw-effects/src/: Bank.hs
hw-effects/src/Bank/: Error.hs
hw-effects/test/: Spec.hs
hw-quickcheck/: README.md  hw-quickcheck.cabal
hw-quickcheck/app/: Main.hs
hw-quickcheck/src/Data/: Group.hs  GroupExpr.hs  Var.hs
hw-quickcheck/test/: Instances.hs  Spec.hs
hw-spreadsheet/: README.md  hw-spreadsheet.cabal
hw-spreadsheet/src/Data/: Direction.hs  Spreadsheet.hs
hw-spreadsheet/src/Data/Functor/: Fix.hs
hw-spreadsheet/src/Handle/: App.hs  Focused.hs  Position.hs  Spreadsheet.hs
laws/: CHANGELOG.md  laws.cabal
laws/src/: BaseLaws.hs
monad-transformers/: monad-transformers.cabal
monad-transformers/app/: Main.hs
multithreading/: CHANGELOG.md  multithreading.cabal
multithreading/app/: Main.hs
parametricity/: fix.hs  free.hs  sort.hs
readert/: CHANGELOG.md  readert.cabal
readert/app/: AppHandle.hs  Main.hs
recap/: CHANGELOG.md  recap.cabal
recap/app/: Main.hs
recap/src/: Lib.hs
recap/src/Data/: NonNegative.hs  Passenger.hs
recap/test/: Spec.hs
recursions/: CHANGELOG.md  recursions.cabal
recursions/app/: Main.hs
resources/: CHANGELOG.md  resources.cabal
resources/app/: Main.hs
santa/: CHANGELOG.md  santa.cabal
santa/app/: Bank.hs  ListTVar.hs  MVars.hs  Main.hs  Santa.hs
