cabal-version:      2.4
name:               hw-quickcheck
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             TurtlePU
maintainer:         sokolov.p64@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: README.md

executable hw-quickcheck
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    hw-quickcheck, base ^>=4.14
    hs-source-dirs:   app
    default-language: Haskell2010

library
    exposed-modules:
      Data.Group
      , Data.GroupExpr
      , Data.Var
    build-depends:    base ^>=4.14
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hw-quickcheck-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    Instances
    build-depends:
      hw-quickcheck
      , base ^>=4.14
      , QuickCheck ^>=2.14
    hs-source-dirs:   test
    default-language: Haskell2010
